--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,21 +37,24 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    // Firebase
+    // Firebase Analytics
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
 
-    // -- Authentication Dependency
-        implementation 'com.google.firebase:firebase-auth:19.4.0'
-        implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
+    // -- Firebase Authentication Dependency
+    implementation 'com.google.firebase:firebase-auth:19.4.0'
+    implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
 
-        // Required only if Facebook login support is required
-        // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
-        //implementation 'com.facebook.android:facebook-android-sdk:5.0.0'
+    // Required only if Facebook login support is required
+    // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
+    //implementation 'com.facebook.android:facebook-android-sdk:5.0.0'
 
-        // Required only if Twitter login support is required
-        // Find the latest Twitter SDK releases here: https://goo.gl/E5wZvQ
-        //implementation 'com.twitter.sdk.android:twitter-core:3.2.0'
-    // -- Authentication Dependency end
+    // Required only if Twitter login support is required
+    // Find the latest Twitter SDK releases here: https://goo.gl/E5wZvQ
+    //implementation 'com.twitter.sdk.android:twitter-core:3.2.0'
+    // -- Firebase Authentication Dependency end
+
+    // Firebase Realtime DB
+    implementation 'com.google.firebase:firebase-database:19.4.0'
 
     // Material UI
     api 'com.google.android.material:material:1.3.0-alpha02'
